<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SmartLedScanning">

    <TextView android:text="@string/mode"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewMode"
        android:layout_marginTop="15dp"
        android:textColor="#ff000000"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sleep_time"
        android:id="@+id/textViewSleepTime"
        android:layout_below="@+id/textViewMode"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:textColor="#ff000000" />

    <SeekBar
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSleep"
        android:layout_below="@+id/textViewSleepTime"
        android:layout_alignParentStart="true"
        android:max="70"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewMode"
        android:layout_toEndOf="@+id/textViewMode"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_mode"
            android:id="@+id/radioButtonLightMode"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_mode"
            android:id="@+id/radioButtonColorMode" />
    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayoutLight"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBarSleep"
        android:layout_marginTop="20dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/delayOff"
            android:id="@+id/textViewDelay"
            android:textColor="#000000"/>

        <SeekBar
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarDelay"
            android:max="120"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/light"
            android:id="@+id/textViewLight"
            android:textColor="#000000"
            android:layout_marginTop="20dp"/>

        <SeekBar
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarLight"
            android:max="100"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayoutColor"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBarSleep"
        android:layout_marginTop="20dp"
        android:visibility="invisible">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breath"
            android:id="@+id/checkBoxBreath"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/red"
            android:id="@+id/textViewRed"
            android:textColor="#000000"
            android:layout_marginTop="20dp"/>

        <SeekBar
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarRed"
            android:max="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/green"
            android:id="@+id/textViewGreen"
            android:textColor="#000000"
            android:layout_marginTop="20dp"/>

        <SeekBar
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarGreen"
            android:max="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/blue"
            android:id="@+id/textViewBlue"
            android:textColor="#000000"
            android:layout_marginTop="20dp"/>

        <SeekBar
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarBlue"
            android:max="100"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayoutInfo"
        android:layout_alignTop="@+id/linearLayoutLight"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SmartLed:"
            android:id="@+id/textViewInfo"
            android:textSize="20dp"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/buttonInfo"
        android:layout_above="@+id/textViewSleepTime"
        android:layout_alignEnd="@+id/linearLayoutLight"
        android:background="#2dbda9" />


</RelativeLayout>
